--- a/feature/home/src/main/res/values/strings.xml
+++ b/feature/home/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="main.title">Home</string>
+    <string name="main.search.placeholder">Search startups…</string>
     <string name="details.share">Share</string>
     <string name="details.title">Details</string>
     <string name="details.location">Location</string>
